Keep observer compatible with Android 11